--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html ng-app='sportsStore'>
 <head>
+	<meta charset='utf-8'/>
+	<meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=no'/>
 	<title>Sports Store</title>
 	<script type="text/javascript" src="./node_modules/angular/angular.js"></script>
 	<link rel="stylesheet" type="text/css" href="./node_modules/bootstrap/dist/css/bootstrap.css" />
